fix for long names pushing tables out of alignment

--- a/app/javascript/src/_tables.scss
+++ b/app/javascript/src/_tables.scss
@@ -4,6 +4,11 @@
   padding: 1em .5em;
 }
 
+table th:first-child {
+  word-break: break-all;
+  max-width: 400px;
+}
+
 @include govuk-media-query($until: tablet) {
   table thead {
     border: 0;
